--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Vamsi Kurama
 email: vamsi.kurama@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Musings of a Computer Scientist.
+  Musings of a Computer Scientist
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vamsikurama.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: vamsi_kurama
