--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vamsikurama.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: vamsi_kurama
-github_username:  vamsi
+github_username: vamsi
 show_excerpts: true
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-
+google_analytics: UA-88364664-1
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
